--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="mobile-web-app-capable" content="yes" />
+<!--    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />-->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Hong Kong mahjong scoring</title>
   </head>
   <body>
     <div id="root"></div>
